6: add: [team_member, user_profile, reminder]

--- a/.env
+++ b/.env
@@ -4,14 +4,17 @@ PORT=1337
 # Environment
 NODE_ENV=development
 
+# MySQL Connection strings 
+# ========================================================================
+# Database Name
+DB_HOST=127.0.0.1
+DB_NAME=__yourtradebase
+DB_USER=root
+DB_PASSWORD=
 
-# # MySQL Connection strings 
-# # ========================================================================
-# # Database Name
-# DB_HOST=127.0.0.1
-# DB_NAME=__yourtradebase
-# DB_USER=root
-# DB_PASSWORD=
+
+
+
 
 
 # # Application Port - KOA server listens on this port (default 3000).
@@ -19,12 +22,10 @@ NODE_ENV=development
 # # Environment
 # NODE_ENV=production
 
-
-
-# MySQL Connection strings 
-# ========================================================================
-# Database Name
-DB_HOST=68.178.165.197
-DB_NAME=paul_yourtradebase
-DB_USER=paul_root
-DB_PASSWORD=Ashwani@1986
+# # MySQL Connection strings 
+# # ========================================================================
+# # Database Name
+# DB_HOST=68.178.165.197
+# DB_NAME=paul_yourtradebase
+# DB_USER=paul_root
+# DB_PASSWORD=Ashwani@1986
