--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ DB_PASSWORD=
 # # MySQL Connection strings 
 # # ========================================================================
 # # Database Name
-# DB_HOST=68.178.165.197
+# DB_HOST=68.178.165.197			/ 65.109.88.41 current
 # DB_NAME=paul_yourtradebase
 # DB_USER=paul_root
 # DB_PASSWORD=Ashwani@1986
